reran entire repo to test repoducability and removed starter files

--- a/paper/references.bib
+++ b/paper/references.bib
@@ -9,8 +9,16 @@
     url = {https://www.R-project.org/},
   }
   
+@Manual{scales,
+  title = {scales: Scale Functions for Visualization},
+  author = {Hadley Wickham and Thomas Lin Pedersen and Dana Seidel},
+  year = {2023},
+  note = {R package version 1.3.0},
+  url = {https://scales.r-lib.org}
+}
   
-@Article{thereferencecanbewhatever,
+  
+@Article{tidyverse,
     title = {Welcome to the {tidyverse}},
     author = {Hadley Wickham and Mara Averick and Jennifer Bryan and Winston Chang and Lucy D'Agostino McGowan and Romain François and Garrett Grolemund and Alex Hayes and Lionel Henry and Jim Hester and Max Kuhn and Thomas Lin Pedersen and Evan Miller and Stephan Milton Bache and Kirill Müller and Jeroen Ooms and David Robinson and Dana Paige Seidel and Vitalie Spinu and Kohske Takahashi and Davis Vaughan and Claus Wilke and Kara Woo and Hiroaki Yutani},
     year = {2019},
@@ -19,44 +27,41 @@
     number = {43},
     pages = {1686},
     doi = {10.21105/joss.01686},
-  }  
+  } 
   
-  
-@Manual{citeLahman,
-    title = {Lahman: Sean `Lahman' Baseball Database},
-    author = {Michael Friendly and Chris Dalzell and Martin Monkman and Dennis Murphy},
-    year = {2020},
-    note = {R package version 8.0-0},
-    url = {https://CRAN.R-project.org/package=Lahman},
-  }  
-  
-  
-@article{gebru2021datasheets,
-  title={Datasheets for datasets},
-  author={Gebru, Timnit and Morgenstern, Jamie and Vecchione, Briana and Vaughan, Jennifer Wortman and Wallach, Hanna and Iii, Hal Daum{\'e} and Crawford, Kate},
-  journal={Communications of the ACM},
-  volume={64},
-  number={12},
-  pages={86--92},
-  year={2021},
-  publisher={ACM New York, NY, USA}
+@Manual{janitor,
+title = {janitor: Simple Tools for Examining and Cleaning Dirty Data},
+author = {Sam Firke},
+year = {2024},
+note = {R package version 2.2.0.9000, https://sfirke.github.io/janitor/},
+url = {https://github.com/sfirke/janitor},
 }
 
-@Misc{rstanarm,
-    title = {rstanarm: {Bayesian} applied regression modeling via {Stan}},
-    author = {Ben Goodrich and Jonah Gabry and Imad Ali and Sam Brilleman},
-    note = {R package version 2.21.3},
-    year = {2022},
-    url = {https://mc-stan.org/rstanarm/},
+@InCollection{knitr,
+    booktitle = {Implementing Reproducible Computational Research},
+    editor = {Victoria Stodden and Friedrich Leisch and Roger D. Peng},
+    title = {knitr: A Comprehensive Tool for Reproducible Research in {R}},
+    author = {Yihui Xie},
+    publisher = {Chapman and Hall/CRC},
+    year = {2014},
+    note = {ISBN 978-1466561595},
+}
+
+@Book{ggplot2,
+    author = {Hadley Wickham},
+    title = {ggplot2: Elegant Graphics for Data Analysis},
+    publisher = {Springer-Verlag New York},
+    year = {2016},
+    isbn = {978-3-319-24277-4},
+    url = {https://ggplot2.tidyverse.org},
   }
-  
-@Manual{palmerpenguins,
-    title = {palmerpenguins: Palmer Archipelago (Antarctica) penguin data},
-    author = {Allison Marie Horst and Alison Presmanes Hill and Kristen B Gorman},
-    year = {2020},
-    note = {R package version 0.1.0},
-    doi = {10.5281/zenodo.3960218},
-    url = {https://allisonhorst.github.io/palmerpenguins/},
+
+@Manual{opendatatoronto,
+    title = {opendatatoronto: Access the City of Toronto Open Data Portal},
+    author = {Sharla Gelfand},
+    year = {2022},
+    note = {R package version 0.1.5},
+    url = {https://CRAN.R-project.org/package=opendatatoronto},
   }
   
   
@@ -69,6 +74,36 @@
     number = {43},
     pages = {1686},
     doi = {10.21105/joss.01686},
-  }  
+  } 
+  
+@online{torontonoise,
+author = {{City of Toronto}},
+title = {Noise Bylaws},
+year = {2024},
+url = {https://www.toronto.ca/city-government/public-notices-bylaws/bylaw-enforcement/noise/},
+urldate = {2024-09-25},
+organization = {City of Toronto},
+type = {Government Website}
+}
+
+@Misc{IberdrolaNoisePollution,
+  title = {What is Noise Pollution? Causes, Effects, Solutions},
+  author = {Iberdrola},
+  year = {2023},
+  url = {https://www.iberdrola.com/sustainability/what-is-noise-pollution-causes-effects-solutions},
+  note = {Accessed: 2024-09-26}
+}
+
+@Article{Seltenrich2018,
+  author    = {Nate Seltenrich},
+  title     = {Inequality of Noise Exposures: A Portrait of the United States},
+  journal   = {Environmental Health Perspectives},
+  year      = {2018},
+  volume    = {126},
+  number    = {12},
+  pages     = {127001},
+  url       = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5915201/},
+  note      = {Accessed: 2024-09-26}
+}
   
   
